plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'io.freefair.lombok' version '9.5.0'
    id("dev.vfyjxf.modaccessor") version "1.2.1"
}

version = mod_version
group = mod_group_id

def customNpcsJar = files("libs/CustomNPCs-Unofficial-NeoForge-1.21.1.20241226.jar")

repositories {
    mavenLocal()

    //kubejs
    maven {
        name = "Latvian"
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        name = "JitPack"
        url = "https://jitpack.io"
        content {
            includeGroup "com.github.rtyley"
        }
    }

    // LDLib2
    maven {
        name = "Jared's maven"
        url = "https://maven.firstdarkdev.xyz/snapshots"
    }

    //GeckoLib
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }

    //Modrinth
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    //cf
    maven {
        url "https://cursemaven.com"
    }

    maven {
        url "https://maven.sighs.cc/repository/maven-public/"
    }

    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "magicTeam MavenReleases"
        url = "https://maven.confluence.ink/releases"
    }
    maven {
        name = "magicTeam MavenSnapshots"
        url = "https://maven.confluence.ink/snapshots"
    }
    exclusiveContent {
        forRepositories(
                mavenLocal(),
                maven {
                    name = "attentionMindMavenReleases"
                    url = "https://maven.confluence.ink/releases"
                },
                maven {
                    name = "attentionMindMavenSnapshots"
                    url = "https://maven.confluence.ink/snapshots"
                }
        )
        filter {
            includeGroup "org.thexeler"
        }
    }
}

base {
    archivesName = "${mod_name}-neoforge-${minecraft_version}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clinet2 {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            programArgument '--username'
            programArgument 'zhenshiz'
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            if (name != "gameTestServer") {
                jvmArguments.add '-XX:+AllowEnhancedClassRedefinition'
                jvmArguments.add '-XX:HotswapAgent=fatjar'
                getAdditionalRuntimeClasspathConfiguration().dependencies.add(project.dependencies.create(customNpcsJar))
            }

            logLevel = org.slf4j.event.Level.DEBUG
            systemProperty("terminal.jline", "true")
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

modAccessor {
    createTransformConfiguration(configurations.compileOnly)
    accessTransformerFiles = project.files('src/main/resources/META-INF/accesstransformer.cfg')
}

configurations.configureEach {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

dependencies {
    // LDLib2
    implementation("com.lowdragmc.ldlib2:ldlib2-neoforge-${minecraft_version}:${ldlib2_version}:all")
    implementation("com.zhenshiz:ViScriptLib-neoforge-${minecraft_version}:${viscriptlib_version}") {
        changing = true
    }
    jarJar("com.zhenshiz:ViScriptLib-neoforge-${minecraft_version}:${viscriptlib_version}") {
        changing = true
    }
    implementation("com.zhenshiz:ViScriptTeam-neoforge-${minecraft_version}:${viscriptteam_version}")
    implementation "org.thexeler:attention-mind:${attention_mind_version}"
    jarJar "org.thexeler:attention-mind:${attention_mind_version}"

    // KubeJS
    implementation "dev.latvian.mods:rhino:${rhino_version}"
    implementation "dev.latvian.mods:kubejs-neoforge:${kubejs_version}"

    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    implementation "org.confluence.lib:Confluence-Magic-Lib:${confluence_lib_version}"
    implementation ("org.confluence.mod:ConfluenceOtherworld:${confluence_version}") {
        transitive = false
    }
    //must
    runtimeOnly "maven.modrinth:sodium:${sodium_version}"
    runtimeOnly "maven.modrinth:iris:${iris_version}"
    runtimeOnly "maven.modrinth:lan-server-properties:${lsp_version}"
    runtimeOnly "maven.modrinth:jei:${jei_version}"

    //chatbox
    compileOnly "maven.modrinth:chatbox:${chatbox_version}"

    compileOnly customNpcsJar

    implementation "software.bernie.geckolib:geckolib-neoforge-1.21.1:4.8.2"

}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description,
                             ldlib2_version         : ldlib2_version,
                             viscriptteam_version   : viscriptteam_version]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = project.group
            artifactId = base.archivesName.get()
            version = project.version

            pom.withXml {
                def dependenciesNode = asNode().getAt("dependencies")[0]
                if (dependenciesNode != null) {
                    // 这里添加你希望保留在 POM 中的 groupId 或 artifactId，也就是从 Maven 拉依赖时会附带的库、模组啥的
                    def whiteList = [
                    ]

                    def dependencies = dependenciesNode.children()
                    def toRemove = []

                    dependencies.each { dep ->
                        def artifactId = dep.artifactId.text()
                        def groupId = dep.groupId.text()

                        if (!whiteList.contains(artifactId) && !whiteList.contains(groupId)) {
                            toRemove.add(dep)
                        }
                    }

                    toRemove.each { dependenciesNode.remove(it) }
                }
            }
        }
    }

    repositories {
        def modVersion = project.findProperty('mod_version') ?: 'unknown'

        boolean isSnapshot = modVersion.toLowerCase().contains('snapshot')

        def publishUrl = isSnapshot ?
                "https://maven.sighs.cc/repository/maven-snapshots/" :
                "https://maven.sighs.cc/repository/maven-releases/"

        def publishUser = System.getenv("SIGHS_PUBLISH_USER")
        def publishPassword = System.getenv("SIGHS_PUBLISH_PASSWORD")

        maven {
            name = "remoteRepo"
            url = uri(publishUrl)
            credentials {
                username = publishUser
                password = publishPassword
            }
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
